[gd_scene load_steps=5 format=2]

[ext_resource path="res://entities/parasite_algae/parasite_algae_adult/parasite_algae.gd" type="Script" id=1]
[ext_resource path="res://entities/parasite_algae/parasite_algae_adult/sprite/parasite algae.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 50.0

[sub_resource type="CircleShape2D" id=2]
radius = 17.4392

[node name="parasite_algae" type="StaticBody2D"]
collision_layer = 12
collision_mask = 12
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="area" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1, -42 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = -34.0
margin_top = -85.0
margin_right = 41.0
margin_bottom = 2.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
